Call Notification Panel - Overlapping issue fix  KasunW-duo committed

--- a/assets/css/agent-customer.css
+++ b/assets/css/agent-customer.css
@@ -16062,8 +16062,7 @@ timeline-event .outbound-panel-right:after {
     bottom: 0;
     z-index: 200;
     width: 300px;
-    min-height: 180px;
-    height: auto;
+    height: 210px;
     background: #fff;
     position: fixed;
     border-radius : 8px;
